--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,148 @@
 /*--- Fonts ---*/
 @font-face {
-  font-family: "PFBeauSansPro";
-  src: url("./../fonts/OpenSans-Regular.woff2") format("woff2");
+  font-family: 'PFBeauSansPro';
+  src: url('./../fonts/OpenSans-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "PaladinPCRus";
-  src: url("./../fonts/PaladinPCRus.woff2") format("woff2");
+  font-family: 'PaladinPCRus';
+  src: url('./../fonts/PaladinPCRus.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
+}
+
+/*--- Reset Styles ---*/
+* {
+  /*--- Disable outline light on touchscreen devices ---*/
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
+  box-sizing: border-box;
+
+  /*--- Disable select text and image ---*/
+  -moz-user-select: none;
+  -o-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  /*--- Reset Styles ---*/
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  border: 0;
+}
+
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  font: inherit;
+}
+
+input,
+textarea,
+select,
+button {
+  font: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+  outline: none;
+  appearance: none;
+}
+
+input[type='search']::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
+textarea {
+  resize: vertical;
+  overflow: auto;
+}
+
+/*--- Common Styles ---*/
+body {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: auto;
+
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  min-width: 360px;
+  min-height: 100dvh;
+
+  font-family: 'OpenSans';
+  font-size: 16px;
+  font-weight: 400;
+
+  background-color: #202020;
+  background-image: url(./../img/bg/main-bg.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #cccccc;
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.container {
+  position: relative;
+
+  width: 100%;
+  height: 100%;
+  max-width: 1200px;
+  padding: 20px;
+}
+
+/*--- Header ---*/
+.header {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+}
+
+.main-title {
+  text-align: center;
+  font-family: 'PaladinPCRus';
+  font-size: 80px;
+  font-weight: 400;
+  color: #ffdd15;
 }
