--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /*--- Fonts ---*/
 @font-face {
-  font-family: 'PFBeauSansPro';
+  font-family: 'OpenSans';
   src: url('./../fonts/OpenSans-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
@@ -102,7 +102,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  color: #cccccc;
+  color: #ffdd15;
 }
 
 body::before {
@@ -113,16 +113,72 @@ body::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align: center;
+  font-family: 'PaladinPCRus';
+  font-weight: 400;
+}
+
+.scrn-title {
+  font-size: 64px;
+}
+
+.scrn-subtitle {
+  font-size: 32px;
+  line-height: 140%;
+}
+
+.screen {
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   position: relative;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
   height: 100%;
   max-width: 1200px;
   padding: 20px;
+}
+
+.main-btn {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 250px;
+  height: 73px;
+
+  background-image: url(./../img/bg/btn-bg.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  font-size: 26px;
 }
 
 /*--- Header ---*/
@@ -140,9 +196,16 @@ body::before {
 }
 
 .main-title {
-  text-align: center;
-  font-family: 'PaladinPCRus';
   font-size: 80px;
-  font-weight: 400;
-  color: #ffdd15;
+}
+
+/*--- Welcome Screen ---*/
+.welcome-screen-subtitle {
+  width: 100%;
+  max-width: 800px;
+  margin-top: 30px;
+}
+
+.welcome-screen-button {
+  margin-top: 60px;
 }
