--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,10 +28,14 @@
   -ms-user-select: none;
   user-select: none;
 
-  /*--- Reset Styles ---*/
+  /*--- Reset Geometry ---*/
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+audio {
+  display: none;
 }
 
 ul,
@@ -81,6 +85,12 @@ textarea {
 }
 
 /*--- Common Styles ---*/
+:root {
+  --yellow: #ffdd15;
+  --green: rgb(30, 250, 147);
+  --red: rgb(255 27 27);
+}
+
 body {
   position: relative;
   overflow: auto;
@@ -101,7 +111,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  color: #ffdd15;
+  color: var(--yellow);
 }
 
 body::before {
@@ -132,8 +142,10 @@ h6 {
 }
 
 .scrn-subtitle {
-  font-size: 32px;
+  font-family: 'OpenSans';
+  font-size: 24px;
   line-height: 140%;
+  letter-spacing: 0px;
 }
 
 .screen {
@@ -149,7 +161,7 @@ h6 {
   align-items: center;
 
   opacity: 1;
-  transition: opacity 0.5s ease;
+  transition: opacity 0.2s ease;
 }
 
 .hidden {
@@ -277,6 +289,7 @@ h6 {
   border-radius: 6px;
   color: rgb(16, 32, 50);
   font-size: 18px;
+  text-align: center;
 }
 
 .register-info {
@@ -299,7 +312,130 @@ h6 {
   margin-top: 60px;
 }
 
-.character-name {
+.home-character-name {
   text-transform: capitalize;
-  color: rgb(255 27 27);
+  color: var(--red);
+}
+
+/*--- Charecter Screen ---*/
+.character-portrait {
+  position: relative;
+  max-width: 360px;
+}
+
+.character-border-img {
+  position: relative;
+  z-index: 10;
+}
+
+.screen-character-character-name {
+  position: absolute;
+  top: 5px;
+  left: 0px;
+
+  width: 100%;
+  text-align: center;
+  padding-left: 100px;
+
+  font-family: 'CyrillicGoth';
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+}
+
+.character-img-wrapper {
+  position: absolute;
+  top: 13%;
+  right: 10px;
+  overflow: hidden;
+  z-index: 9;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 75%;
+  height: 85%;
+}
+
+.character-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.character-info-wrapper {
+  position: absolute;
+  bottom: -22px;
+  left: 0px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-left: 100px;
+  padding-right: 30px;
+}
+
+.character-wins {
+  color: var(--green);
+}
+
+.character-loses {
+  color: var(--red);
+}
+
+.another-characters {
+  position: relative;
+  z-index: 20;
+  margin-top: 60px;
+  margin-left: 50px;
+  display: flex;
+  gap: 20px;
+}
+
+.another-character {
+  position: relative;
+  z-index: 20;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  width: 100px;
+  height: 143px;
+  cursor: pointer;
+  border: 1px solid rgb(202, 151, 75);
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  transform-origin: bottom;
+}
+
+.another-character-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.3s ease;
+}
+
+.another-character.active::before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.another-character.active {
+  cursor: default;
+}
+
+.another-character.active img {
+  filter: grayscale(100%);
+}
+
+.another-character:not(.active):hover {
+  z-index: 21;
+  transform: scale(1.1);
 }
