--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,7 +63,6 @@ button {
   font: inherit;
 }
 
-input,
 textarea,
 select,
 button {
@@ -89,6 +88,7 @@ textarea {
   --yellow: #ffdd15;
   --green: rgb(30, 250, 147);
   --red: rgb(255 27 27);
+  --min-width: 1260px;
 }
 
 body {
@@ -99,7 +99,7 @@ body {
   flex-direction: column;
 
   width: 100%;
-  min-width: 800px;
+  min-width: var(--min-width);
   min-height: 100dvh;
 
   font-family: 'OpenSans';
@@ -138,7 +138,7 @@ h6 {
 }
 
 .scrn-title {
-  font-size: 64px;
+  font-size: 44px;
 }
 
 .scrn-subtitle {
@@ -179,7 +179,7 @@ h6 {
 
   width: 100%;
   height: 100%;
-  max-width: 1200px;
+  max-width: 1360px;
   padding: 20px;
 }
 
@@ -250,6 +250,7 @@ h6 {
   justify-content: center;
 
   width: 100%;
+  min-width: var(--min-width);
 }
 
 .main-title {
@@ -257,7 +258,7 @@ h6 {
   font-size: clamp(
     32px,
     32px + (80 - 32) * (100vw - 360px) / (1280 - 360),
-    80px
+    60px
   );
 }
 
@@ -470,8 +471,174 @@ h6 {
 
 /*--- Battle Screen ---*/
 .battle-wrapper {
-  border: 1px solid purple;
   display: flex;
   justify-content: space-between;
   width: 100%;
+  margin-top: 50px;
+}
+
+.battle-screen .character-portrait,
+.battle-screen .enemy-portrait {
+  position: relative;
+  max-width: 300px;
+}
+
+.enemy-name {
+  position: absolute;
+  top: 5px;
+  left: 0px;
+
+  width: 100%;
+  text-align: center;
+  padding-right: 100px;
+
+  font-family: 'CyrillicGoth';
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  text-transform: capitalize;
+}
+
+.enemy-img-wrapper {
+  position: absolute;
+  top: 13%;
+  left: 10px;
+  overflow: hidden;
+  z-index: 9;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 75%;
+  height: 85%;
+}
+
+.enemy-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.enemy-border-img {
+  position: relative;
+  z-index: 10;
+}
+
+.character-health-wrapper {
+  width: 100%;
+  padding-left: 72px;
+  margin-top: 5px;
+}
+
+.enemy-health-wrapper {
+  width: 100%;
+  padding-right: 72px;
+  margin-top: 5px;
+}
+
+.health-title {
+  font-size: 14px;
+  text-align: center;
+}
+
+.health-bar {
+  display: flex;
+  width: 100%;
+  height: 10px;
+  margin-top: 5px;
+  border: 1px solid rgb(95, 8, 8);
+  border-radius: 4px;
+}
+
+.health-bar-fill {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(115, 8, 8);
+}
+
+.battle-conditions-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.battle-conditions-title {
+  font-size: 22px;
+  text-align: center;
+}
+
+.battle-checkboxes-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+
+  width: 100%;
+  margin-top: 20px;
+}
+
+.battle-checkboxes-title {
+  font-size: 18px;
+  margin-bottom: 16px;
+}
+
+.battle-checkboxes-line {
+  width: 1px;
+  height: 100%;
+  background-color: var(--yellow);
+}
+
+.checkbox-wrapper {
+  display: flex;
+  gap: 16px;
+  margin-top: 10px;
+}
+
+.checkbox-wrapper label,
+.checkbox-wrapper input {
+  cursor: pointer;
+}
+
+.battle-checkboxes-left .checkbox-wrapper {
+  justify-content: flex-end;
+}
+
+.battle-checkboxes-right .checkbox-wrapper {
+  justify-content: flex-start;
+}
+
+.attack-btn {
+  margin-top: 60px;
+}
+
+.logs-wrapper {
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+  margin-top: 40px;
+  width: 60%;
+  height: 140px;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.logs-bg {
+  max-width: 800px;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.1); /* можно добавить рамку */
 }
