--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -648,3 +648,68 @@ h6 {
   cursor: not-allowed;
   pointer-events: none;
 }
+
+/*--- Popup ---*/
+.popup-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1100;
+  opacity: 1;
+  backdrop-filter: blur(7px);
+  transition: all 0.2s ease;
+}
+
+.popup-wrapper.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.popup-content {
+  position: relative;
+  width: 600px;
+  height: 400px;
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  background-image: url(./../img/bg/popup-bg.webp);
+  border: 1px solid var(--yellow);
+  border-radius: 4px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.popup-content::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 0;
+}
+
+.popup-content * {
+  position: relative;
+  z-index: 2;
+  text-align: center;
+}
+
+.popup-content h2 {
+  font-size: 36px;
+}
+
+.popup-content p {
+  font-size: 22px;
+  margin-top: 20px;
+  margin-bottom: 80px;
+}
