feat: add color for logs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -639,6 +639,11 @@ h6 {
   overflow-y: auto;
 }
 
+.logs-wrapper b {
+  color: rgb(206, 27, 27);
+  text-transform: capitalize;
+}
+
 .logs-bg {
   max-width: 800px;
 }
